# docs/swagger.json
@@ -16,6 +16,46 @@
     "host": "city-tags-api.com",
     "basePath": "/api/v0",
     "paths": {
+        "/v0/cities/": {
+            "get": {
+                "description": "Get cities with pagination",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get cities",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Offset for pagination",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit for pagination",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.getCityResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ClientErr"
+                        }
+                    }
+                }
+            }
+        },
         "/v0/cities/{cityId}": {
             "get": {
                 "description": "Get city information by providing a specific city id",
